user.css
/* ... */
.main-userWidget-displayName,
.main-userWidget-chevron {
  display: none !important;
}


/* menus */

.main-contextMenu-menuItemButton,
.main-userWidget-dropDownMenuItemButton {
  border-radius: var(--border-radius-1);
  color: var(--spice-text) !important;
  height: 32px;
  padding-left: 8px;
}

.main-contextMenu-menuItem,
._60cb742e518d084c3c959007b9463b51-scss>li {
  margin: 2px 6px;
}

.main-contextMenu-menuItem:first-child,
._60cb742e518d084c3c959007b9463b51-scss> :first-child {
  margin: 6px 6px 2px;
}

.main-contextMenu-menuItem:last-child {
  margin: 2px 6px 6px;
}

._60cb742e518d084c3c959007b9463b51-scss> :last-child {
  margin: 2px 6px 8px;
}

.main-contextMenu-menu,
._60cb742e518d084c3c959007b9463b51-scss {
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-layer-shadow);
  background-color: var(--spice-card);
}

.queue-tabBar-dropdownItemLink {
  color: var(--spice-text) !important;
}


/* buttons */

.icon, .gSLhUO {
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  margin: auto;
  display: block;
}

.gSLhUO path,
.icon > svg,
.x-searchInput-searchInputIconContainer path,
.show-episodeBlock-playerActions svg, 
.main-playButton-PlayButton polygon, 
.main-playButton-PlayButton rect {
  display: none !important;
}

.home-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_home_24_regular.svg');
  background-color: var(--spice-subtext) !important; 
}

.home-active-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_home_24_filled.svg');
  background-color: var(--spice-accent) !important; 
}

.search-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_search_24_regular.svg');
  background-color: var(--spice-subtext) !important; 
}

.search-active-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_search_24_filled.svg');
  background-color: var(--spice-accent) !important; 
}

.collection-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_library_24_regular.svg');
  background-color: var(--spice-subtext) !important; 
}

.collection-active-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_library_24_filled.svg');
  background-color: var(--spice-accent) !important; 
}

.main-navBar-navBarLink[href="/lyrics-plus"] > .collection-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_slide_text_24_regular.svg');
  background-color: var(--spice-subtext) !important; 
}

.main-navBar-navBarLink[href="/lyrics-plus"] > .collection-active-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_slide_text_24_filled.svg');
  background-color: var(--spice-accent) !important; 
}

.main-createPlaylistButton-button {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_add_circle_24_regular.svg');
  background-color: var(--spice-subtext) !important;
  padding: 0px;
  margin: auto;
  height: 24px !important;
  width: 24px !important;
  display: block !important; 
  margin-top: 20px !important;
  margin-bottom: 10px !important;
}

.main-createPlaylistButton-button svg {
  display: none !important;
}

.main-createPlaylistButton-createPlaylistIcon {
  background-color: var(--spice-subtext) !important;
  display: block !important;
}

.main-createPlaylistButton-createPlaylistIcon > svg, .main-createPlaylistButton-text {
  display: none !important;
}

.main-collectionLinkButton-collectionLinkButton {
  width: 49px;
  min-height: 48px;
  margin: auto;
  margin-bottom: 14px;
  justify-content: center;
}

.main-collectionLinkButton-collectionLinkButton[href="/collection/tracks"] {
  background: linear-gradient(135deg,#450af5,#c4efd9) !important;
}

.main-collectionLinkButton-collectionLinkButton[href="/collection/episodes"] {
  background-color: #006450 !important;
}

.main-collectionLinkButton-collectionLinkButton[href="/collection/tracks"] .main-collectionLinkButton-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_heart_24_filled.svg');
  background-color: white !important;
  margin-right: 0px;
}

.main-collectionLinkButton-collectionLinkButton[href="/collection/episodes"] .main-collectionLinkButton-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_mic_on_24_filled.svg');
  background-color: #00DA6B !important;
  margin-right: 0px;
}

.main-likedSongsButton-likedSongsIcon,
.main-yourEpisodesButton-yourEpisodesIcon,
.main-collectionLinkButton-collectionLinkText {
  display: none !important;
}


.main-type-balladBold {
  font-family: 'Segoe UI', sans-serif !important;
  font-weight: 500;
  letter-spacing: 0.2px;
}

.main-type-minuetBold {
  text-transform: none;
  letter-spacing: 0px;
  font-weight: 400;
  font-size: 14px;
  line-height: 0px;
}

.main-shelf-seeAll {
  height: 21px;
}

style {
  --nav-bar-width: 62px !important;
}

.main-playButton-PlayButton.main-playButton-primary,
.main-pageErrorTemplate-errorButton {
  color: var(--spice-shadow);
}

button.switch {
  background-color: transparent !important;
}

#spicetify-home-config button,
#spicetify-sidebar-config button {
  background-color: var(--spice-main) !important;
  color: var(--spice-text) !important;
  border: none !important;
}

#spicetify-home-config button {
  border-radius: var(--border-radius-2) !important;
}

#spicetify-sidebar-config button {
  border-radius: var(--border-radius-3) !important;
}

#spicetify-home-config button:disabled,
#spicetify-sidebar-config button:disabled {
  background-color: var(--spice-button-disabled) !important;
  color: var(--spice-text) !important;
}

.main-buttons-button,
.show-followButton-button {
  background-color: var(--spice-card);
  font-family: "Segoe UI", sans-serif;
  font-weight: normal;
  font-size: 15px;
  letter-spacing: 0px;
  text-transform: none;
  border-radius: var(--border-radius-2);
  -webkit-font-smoothing: subpixel-antialiased;
}

.main-button-outlined,
.main-button-outlined:hover {
  border: var(--spice-contour) solid 1px !important;
}
/* ... */

